spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,9 @@ body {
     scroll-behavior: smooth;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    
 }
+
 
 h1 {
     font-weight: 400;
@@ -105,6 +107,10 @@ footer {
 .navbar a {
     padding: 30px 12px;
     border-radius: 10px; /* by setting the border radius before the a is active or hovered it prevents a flash of square highlighting from appearing */
+}
+
+.navbar-brand {
+    padding-right: 10%;
 }
 
 .navbar li>a:hover,
